--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
     </header>
 
     <nav>
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="servces.html">Services</a>
         <a href="aboutus.html">About Us</a>
         <a href="contact.html">Contact</a>
