--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </header>
 
     <nav>
-        <a href="homepage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="servces.html">Services</a>
         <a href="aboutus.html">About Us</a>
         <a href="contact.html">Contact</a>
