--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Socify - Boost Your Business Online</title>
     <style>
         body {
-            background-color: #2c3e50; /* Dark Blue Background */
+            background-color: #2c3e50;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            color: #ecf0f1; /* Light Gray Text Color */
+            color: #ecf0f1;
         }
 
         header {
-            background-color: #e74c3c; /* Red Header */
+            background-color: #e74c3c;
             color: #ffffff;
             text-align: center;
-            padding: 10px; /* Smaller Header Bar */
+            padding: 20px;
         }
 
         nav {
@@ -29,15 +29,33 @@
             text-decoration: none;
             color: #ecf0f1;
             padding: 10px;
-            margin: 0 10px;
+            margin: 0 5px;
             border-radius: 5px;
-            background-color: #3498db; /* Blue Navigation Background */
+            background-color: #3498db;
         }
+
+        /* Media query for screens smaller than 600px */
+        @media only screen and (max-width: 600px) {
+            nav a {
+                padding: 8px;
+                font-size: 14px;
+            }
+
+            section {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .left-content {
+                text-align: center;
+            }
+        }
+
         section {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 50px;
+            padding: 20px;
         }
 
         .left-content {
@@ -71,17 +89,17 @@
         }
 
         footer {
-            background-color: #34495e; /* Dark Blue Footer */
+            background-color: #34495e;
             padding: 20px;
             text-align: center;
         }
 
         h2 {
-            font-size: 2em; /* Larger Font Size */
+            font-size: 2em;
         }
 
         p {
-            font-size: 1.2em; /* Larger Font Size */
+            font-size: 1.2em;
         }
     </style>
 </head>
