--- a/aboutus.html
+++ b/aboutus.html
@@ -34,6 +34,14 @@
             background-color: #3498db; /* Blue Navigation Background */
         }
 
+        /* Media query for screens smaller than 600px */
+        @media only screen and (max-width: 600px) {
+            nav a {
+                padding: 8px;
+                font-size: 14px;
+            }
+        }
+        
         section {
             display: flex;
             flex-direction: column;
