--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             .left-content {
                 text-align: center;
             }
+
+            .right-content img {
+                width: 100%; /* Make the image fill the width of the container */
+                max-width: 300px; /* Set a maximum width for the image */
+                height: auto; /* Maintain the aspect ratio */
+            }
         }
 
         section {
@@ -149,4 +155,3 @@
 
 </body>
 </html>
-
