--- a/servces.html
+++ b/servces.html
@@ -6,23 +6,23 @@
     <title>Socify - Services</title>
     <style>
         body {
-            background-color: #2c3e50; /* Dark Blue Background */
+            background-color: #2c3e50;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            color: #ecf0f1; /* Light Gray Text Color */
+            color: #ecf0f1;
         }
 
         header {
-            background-color: #e74c3c; /* Red Header */
+            background-color: #e74c3c;
             color: #ffffff;
             text-align: center;
-            padding: 10px; /* Smaller Header Bar */
+            padding: 20px;
         }
 
         nav {
             text-align: center;
-            padding: 10px;  
+            padding: 10px;
         }
 
         nav a {
@@ -31,14 +31,23 @@
             padding: 10px;
             margin: 0 10px;
             border-radius: 5px;
-            background-color: #3498db; /* Blue Navigation Background */
+            background-color: #3498db;
+            transition: background-color 0.3s; /* Smooth transition on hover */
+        }
+
+        /* Media query for screens smaller than 600px */
+        @media only screen and (max-width: 600px) {
+            nav a {
+                padding: 8px;
+                font-size: 14px;
+            }
         }
 
         section {
             display: flex;
-            flex-direction: column; /* Center text vertically */
-            align-items: center; /* Center text horizontally */
-            justify-content: center; /* Center text vertically */
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             padding: 50px;
         }
 
@@ -68,17 +77,17 @@
         }
 
         footer {
-            background-color: #34495e; /* Dark Blue Footer */
+            background-color: #34495e;
             padding: 20px;
             text-align: center;
         }
 
         h2 {
-            font-size: 2em; /* Larger Font Size */
+            font-size: 2em;
         }
 
         p {
-            font-size: 1.2em; /* Larger Font Size */
+            font-size: 1.2em;
         }
     </style>
 </head>
@@ -127,4 +136,3 @@
 
 </body>
 </html>
-
