--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
             <h2>Contact Us</h2>
             <p>Have questions, feedback, or just want to connect? Socify is here for you. Feel free to reach out by clicking the button below, and we'll respond to your email as quickly as possible.</p>
 
-            <p>At Socify, we value your input and strive to provide excellent customer service. Whether you're a current client or interested in our services, we're excited to hear from you.</p>
+            <p>At Socify we value your input and strive to provide excellent customer service. Whether you're a current client or interested in our services, we're excited to hear from you.</p>
 
             <p>If you prefer traditional communication, you can also reach us by phone at [44+ 07888904023]. Our dedicated team is ready to assist you with any inquiries you may have.</p>
 
